--- a/examples/RVC_O3/database/utils/compose_kinetics.ipynb
+++ b/examples/RVC_O3/database/utils/compose_kinetics.ipynb
@@ -39,8 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T = None\n",
-    "use_arrhenius = True\n",
+    "T = [1e4]\n",
+    "use_arrhenius = False\n",
     "nb_lev = 6115\n",
     "kin_file = \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/O3_UMN.hdf5\"\n",
     "arr_fit = \"Arrhenius_T5000_T15000\""
@@ -55,6 +55,7 @@
    "source": [
     "# Save path\n",
     "out_path = \"./../\"\n",
+    "filename = \"kinetics_qct\"\n",
     "os.makedirs(out_path, exist_ok=True)"
    ]
   },
@@ -165,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dicttoh5(kin_dtb, out_path + \"/kinetics.hdf5\")"
+    "dicttoh5(kin_dtb, f\"{out_path}/{filename}.hdf5\")"
    ]
   }
  ],
