--- a/examples/RVC_O3/database/utils/compose_kinetics.ipynb
+++ b/examples/RVC_O3/database/utils/compose_kinetics.ipynb
@@ -34,15 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d1d709e8-d714-466b-aa2f-bfd235333a83",
+   "execution_count": null,
+   "id": "5dba965c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# List of temperatures at which the rates are considered (Optional)\n",
     "T = [1e4]\n",
+    "# Boolean flag to indicate whether to use the fitted Arrhenius rates\n",
     "use_arrhenius = False\n",
+    "# Number of rovibrational levels of the molecule\n",
     "nb_lev = 6115\n",
+    "# Path to the rates constant database (HDF5 file)\n",
     "kin_file = \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/O3_UMN.hdf5\"\n",
+    "# HDF5 group containing the fitted Arrhenius rates\n",
     "arr_fit = \"Arrhenius_T5000_T15000\""
    ]
   },
