--- a/examples/RVC_O3/inputs/postproc/test_solver.ipynb
+++ b/examples/RVC_O3/inputs/postproc/test_solver.ipynb
@@ -226,7 +226,7 @@
     "pp.plot_mom_evolution(\n",
     "  path=path_to_saving,\n",
     "  t=t,\n",
-    "  n_m={\"QCT\": ni_qct, \"Model\": ni_mdl},\n",
+    "  n_m={\"QCT\": ni_qct, \"Model\": ni_mdl}, # Do not change 'QCT' name\n",
     "  molecule=system_qct.mix.species[\"molecule\"],\n",
     "  max_mom=2,\n",
     "  molecule_label=\"\\\\text{O$_2$}\",\n",
