--- a/examples/RVC_O3/database/utils/compose_kinetics.ipynb
+++ b/examples/RVC_O3/database/utils/compose_kinetics.ipynb
@@ -177,7 +177,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
