--- a/examples/VC_O3_O4/postproc/accuracy_linfom.ipynb
+++ b/examples/VC_O3_O4/postproc/accuracy_linfom.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "T = 1e4\n",
     "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/ronek/examples/VC_O3_O4/database/\"\n",
-    "path_to_data = \"/home/zanardi/Codes/ML/RONEK/run/VC_O3_O4/test/data/\"\n",
+    "path_to_data = \"/home/zanardi/Codes/ML/RONEK/run/VC_O3_O4/run01/data/\"\n",
     "path_to_saving = \"./lin_fom/\"\n",
     "nb_samples = 1000\n",
     "nb_workers = 10"
@@ -263,7 +263,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
