--- a/examples/VC_O3_O4/postproc/timescales.ipynb
+++ b/examples/VC_O3_O4/postproc/timescales.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/ronek/examples/VC_O3_O4/database/\"\n",
     "path_to_bases = {\n",
-    "  m: f\"/home/zanardi/Codes/ML/RONEK/run/VC_O3_O4/test/max_mom_{m}/cobras_bases.hdf5\" for m in (2,10)\n",
+    "  m: f\"/home/zanardi/Codes/ML/RONEK/run/VC_O3_O4/run01/max_mom_{m}/cobras_bases.hdf5\" for m in (2,10)\n",
     "}\n",
     "rom_dims = {\n",
     "  4: 2,\n",
@@ -159,7 +159,7 @@
    "source": [
     "system.update_fom_ops(T)\n",
     "n_eq = system.mix.compute_eq_comp(rho)\n",
-    "A[\"FOM\"] = system._compute_lin_fom_ops_a_full(n_eq[0], by_mass=False)"
+    "A[\"FOM\"] = system.compute_lin_fom_ops_a(n_eq, by_mass=True)"
    ]
   },
   {
@@ -193,12 +193,7 @@
     "  psi = bases[m][\"psi\"][:,:r]\n",
     "  system.set_basis(phi, psi)\n",
     "  # Compute ROM linear operator\n",
-    "  A[f\"ROM-{r+1}\"] = system._compute_lin_fom_ops_a_full(\n",
-    "    n_a_eq=n_eq[0],\n",
-    "    phi=system.phi,\n",
-    "    psi=system.psi,\n",
-    "    by_mass=False\n",
-    "  )"
+    "  A[f\"ROM-{r+1}\"] = system.compute_lin_rom_ops_a(n_eq, by_mass=True)"
    ]
   },
   {
@@ -237,7 +232,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
