--- a/examples/RVC_O3/postproc/timescales.ipynb
+++ b/examples/RVC_O3/postproc/timescales.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e5efb1c0",
    "metadata": {},
    "outputs": [],
@@ -193,12 +193,7 @@
     "  psi = bases[m][\"psi\"][:,:r]\n",
     "  system.set_basis(phi, psi)\n",
     "  # Compute ROM linear operator\n",
-    "  A[f\"ROM-{r+1}\"] = system._compute_lin_fom_ops_a_full(\n",
-    "    n_a_eq=n_eq[0],\n",
-    "    phi=system.phi,\n",
-    "    psi=system.psi,\n",
-    "    by_mass=False\n",
-    "  )"
+    "  A[f\"ROM-{r+1}\"] = system.compute_lin_rom_ops_a(n_eq, by_mass=True)"
    ]
   },
   {
@@ -237,7 +232,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sciml",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
