--- a/examples/RVC_N3/postproc/timescales.ipynb
+++ b/examples/RVC_N3/postproc/timescales.ipynb
@@ -152,14 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "12319f51",
    "metadata": {},
    "outputs": [],
    "source": [
     "system.update_fom_ops(T)\n",
     "n_eq = system.mix.compute_eq_comp(rho)\n",
-    "A[\"FOM\"] = system._compute_lin_fom_ops_a_full(n_eq[0], by_mass=False)"
+    "A[\"FOM\"] = system.compute_lin_rom_ops_a(n_eq[0], by_mass=False)"
    ]
   },
   {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e5efb1c0",
    "metadata": {},
    "outputs": [],
@@ -193,12 +193,7 @@
     "  psi = bases[m][\"psi\"][:,:r]\n",
     "  system.set_basis(phi, psi)\n",
     "  # Compute ROM linear operator\n",
-    "  A[f\"ROM-{r+1}\"] = system._compute_lin_fom_ops_a_full(\n",
-    "    n_a_eq=n_eq[0],\n",
-    "    phi=system.phi,\n",
-    "    psi=system.psi,\n",
-    "    by_mass=False\n",
-    "  )"
+    "  A[f\"ROM-{r+1}\"] = system.compute_lin_rom_ops_a(n_eq, by_mass=True)"
    ]
   },
   {
