--- a/examples/RVC_O3/postproc/timescales.ipynb
+++ b/examples/RVC_O3/postproc/timescales.ipynb
@@ -152,14 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "12319f51",
    "metadata": {},
    "outputs": [],
    "source": [
     "system.update_fom_ops(T)\n",
     "n_eq = system.mix.compute_eq_comp(rho)\n",
-    "A[\"FOM\"] = system._compute_lin_fom_ops_a_full(n_eq[0], by_mass=False)"
+    "A[\"FOM\"] = system.compute_lin_rom_ops_a(n_eq[0], by_mass=False)"
    ]
   },
   {
